Remove vendor bin path
Co-authored-by: Pascal Birchler <pascal.birchler@gmail.com>

--- a/templates/plugin-composer.mustache
+++ b/templates/plugin-composer.mustache
@@ -3,6 +3,6 @@
     "wp-cli/i18n-command": "^2"
   },
   "scripts": {
-    "makepot": "./vendor/bin/wp i18n make-pot ."
+    "makepot": "wp i18n make-pot ."
   }
 }
