--- a/templates/taxonomy_extended.mustache
+++ b/templates/taxonomy_extended.mustache
@@ -4,11 +4,11 @@
  * Registers the `{{machine_name}}` taxonomy,
  * for use with {{post_types}}.
  */
-function {{machine_name}}_init() {
+function {{prefix}}_init() {
 {{output}}
 }
 
-add_action( 'init', '{{machine_name}}_init' );
+add_action( 'init', '{{prefix}}_init' );
 
 /**
  * Sets the post updated messages for the `{{machine_name}}` taxonomy.
@@ -16,7 +16,7 @@ add_action( 'init', '{{machine_name}}_init' );
  * @param  array $messages Post updated messages.
  * @return array Messages for the `{{machine_name}}` taxonomy.
  */
-function {{machine_name}}_updated_messages( $messages ) {
+function {{prefix}}_updated_messages( $messages ) {
 
 	$messages['{{slug}}'] = [
 		0 => '', // Unused. Messages start at index 1.
@@ -31,4 +31,4 @@ function {{machine_name}}_updated_messages( $messages ) {
 	return $messages;
 }
 
-add_filter( 'term_updated_messages', '{{machine_name}}_updated_messages' );
+add_filter( 'term_updated_messages', '{{prefix}}_updated_messages' );
