--- a/templates/block-php.mustache
+++ b/templates/block-php.mustache
@@ -33,11 +33,11 @@ function {{machine_name}}_block_init() {
 		{{#theme}}
 		get_stylesheet_directory_uri() . "/blocks/{$index_js}",
 		{{/theme}}
-		[
+		array(
 			'wp-blocks',
 			'wp-i18n',
 			'wp-element',
-		],
+		),
 		filemtime( "{$dir}/{$index_js}" ),
 		false
 	);
@@ -51,7 +51,7 @@ function {{machine_name}}_block_init() {
 		{{#theme}}
 		get_stylesheet_directory_uri() . "/blocks/{$editor_css}",
 		{{/theme}}
-		[],
+		array(),
 		filemtime( "{$dir}/{$editor_css}" )
 	);
 
@@ -64,17 +64,17 @@ function {{machine_name}}_block_init() {
 		{{#theme}}
 		get_stylesheet_directory_uri() . "/blocks/{$style_css}",
 		{{/theme}}
-		[],
+		array(),
 		filemtime( "{$dir}/{$style_css}" )
 	);
 
 	register_block_type(
 		'{{namespace}}/{{slug}}',
-		[
+		array(
 			'editor_script' => '{{slug}}-block-editor',
 			'editor_style'  => '{{slug}}-block-editor',
 			'style'         => '{{slug}}-block',
-		]
+		)
 	);
 }
 
